# frog-game-framework

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  INSTALL.md  README.md
cmake/modules/: build_config.cmake  install_3rdparty.cmake
cmake/msvc/: compiler_c_flags_overrides.cmake  compiler_cxx_flags_overrides.cmake
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt
src/benchmark/source/: threadLock_benchmark.cc
src/benchmark/source/spin_lock/: clhLock.c  clhLock.h  mscLock.c  mscLock.h  rwSpinLock.c  rwSpinLock.h  spinLock.c  spinLock.h
src/core/: CMakeLists.txt
src/core/include/: byteQueue_t.h  cbuf_t.h  fs_t.h  hash_t.h  heap_t.h  inetAddress_t.h  log_t.h  macros_t.h  platform_t.h  queue_t.h  rbtree_t.h  rwSpinLock_t.h  slice_t.h  spinLock_t.h  thread_t.h  time_t.h  utility_t.h
src/core/include/codec/: tpack_t.h  webSocket_t.h
src/core/include/cxx-mem/: new_delete_override_t.hpp  stl-override_t.hpp  stl_allocator_t.hpp
src/core/include/eventIO/: eventAsync_t.h  eventIOThread_t.h  eventIO_t.h
src/core/include/eventIO/internal/: eventTimer_t.h
src/core/include/eventIO/internal/posix/: eventConnection_t.h  eventIO-inl.h  eventIOLoop_t.h  eventListenPort_t.h  eventWatcher_t.h  poller_t.h
src/core/include/eventIO/internal/win/: eventConnection_t.h  eventIO-inl.h  eventListenPort_t.h  eventWatcher_t.h  iocpExt_t.h
src/core/include/lockStep/: lockStepPack.h  lockStepPack_t.h
src/core/include/msgpack/: msgpackDecode_t.h  msgpackEncode_t.h
src/core/include/openssl/: crypt_t.h  ssl_t.h
src/core/source/codec/: tpack_t.c  webSocket_t.c
src/core/source/detail/: byteQueue_t.c  fs_t.c  inetAddress_t.c  log_t.c  time_t.c  utility_t.c
src/core/source/eventIO/: eventIOThread_t.c  eventTimer_t.c
src/core/source/eventIO/posix/: eventConnection_t.c  eventIOLoop_t.c  eventIO_t.c  eventListenPort_t.c  eventWatcher_t.c
src/core/source/eventIO/posix/poller/: poller_epoll_t.c  poller_kqueue_t.c  poller_select_t.c
src/core/source/eventIO/win/: eventConnection_t.c  eventIO_t.c  eventListenPort_t.c  eventWatcher_t.c
src/core/source/msgpack/: msgpackDecode_t.c  msgpackEncode_t.c
src/core/source/openssl/: crypt_t.c  ssl_t.c
src/core/source/thread/pthread/: thread_t.c
src/core/source/thread/win/: thread_t.c
src/lua/: CMakeLists.txt
src/lua/example/: config.lua  start-up.lua
src/lua/helper/: channelBlock.lua  channelPool.lua  log.lua  logExt.lua  queueLock.lua
src/lua/helper/db/: mysql.lua  mysqlCodec.lua  redis.lua  redisCodec.lua
src/lua/helper/http/: httpCodec.lua  httpTransferCodec.lua  request.lua  response.lua  url.lua
src/lua/service/: bootstrap.lua  consoleService.lua  debuggerService.lua  localServices.lua  logService.lua  monitorService.lua
src/lua/service/example/: example.lua  example_call.lua  example_callBuf.lua  example_channel.lua  example_command.lua  example_console.lua  example_crypt.lua  example_dnsResolve.lua  example_exit.lua  example_httpRequest.lua  example_httpResponse.lua  example_mysql.lua  example_queueLock.lua  example_redis.lua  example_sleep.lua  example_timer.lua
src/runtime/: CMakeLists.txt
src/runtime/include/buffer/: lbuffer_t.h
src/runtime/include/channel/: lchannelExt_t.h
src/runtime/include/crypt/: lcrypt_t.h
src/runtime/include/db/: lmysql_t.h  lredis_t.h
src/runtime/include/debug/: ldebug_t.h
src/runtime/include/env/: lenv_t.h
src/runtime/include/http/: lhttpTransfer_t.h  lhttp_t.h
src/runtime/include/internal/: lconfig_t.h  lconnector_t.h  ldnsResolve_t.h  lenv-inl.h  llistenPort_t.h  lloadCache_t.h  lpackagePath_t.h  lservice-inl.h  ltimerWatcher_t.h
src/runtime/include/lockStepPack/: lockStep.h  lockStepPack.h  lockStepPackStream.h
src/runtime/include/lockstep/: llockstep_t.h
src/runtime/include/msgpack/: lmsgpack_t.h
src/runtime/include/service/: lservice_t.h
src/runtime/include/sharetable/: lsharetable_t.h
src/runtime/include/stream/: ltpack_t.h  lwebSocket_t.h
src/runtime/source/buffer/: lbuffer_t.c
src/runtime/source/channel/: lchannelExt_t.c
src/runtime/source/crypt/: lcrypt_t.c
src/runtime/source/db/: lmysql_t.c  lredis_t.c
src/runtime/source/debug/: ldebug_t.c
src/runtime/source/env/: lenv_t.c
src/runtime/source/http/: lhttpTransfer_t.c  lhttp_t.c
src/runtime/source/internal/: lconfig_t.c  lconnector_t.c  ldnsResolve_t.c  llistenPort_t.c  lloadCache_t.c  lpackagePath_t.c  ltimerWatcher_t.c
src/runtime/source/llockStep/: llockStep.cpp  llockStepPack.c  llockStepPackStream.cpp
src/runtime/source/lockstep/: llockStep_t.c
src/runtime/source/msgpack/: lmsgpack_t.c
src/runtime/source/service/: lservice_t.c
src/runtime/source/sharetable/: lsharetable_t.c
src/runtime/source/stream/: ltpack_t.c  lwebSocket_t.c
src/serverBin/: CMakeLists.txt
src/serverBin/source/: main.c
src/service/: CMakeLists.txt
src/service/include/: serviceCenter_t.h  serviceEvent_t.h  serviceMonitor_t.h  service_t.h
src/service/include/channel/: channelCenter_t.h  channel_t.h
src/service/include/internal/: connector_t.h  dnsResolve_t.h  listenPort_t.h  service-inl.h  timerWatcher_t.h
src/service/include/stream/: codecStream_t.h  lockStepPackStream.h  mysqlStream_t.h  tpackStream_t.h  webSocketStream_t.h
src/service/source/: connector_t.c  dnsResolve_t.c  listenPort_t.c  serviceCenter_t.c  serviceMonitor_t.c  service_t.c  timerWatcher_t.c
src/service/source/channel/: channelCenter_t.c  channel_t.c
src/service/source/stream/: lockStepPackStream_t.c  mysqlStream_t.c  tpackStream_t.c  webSocketStream_t.c
src/unittest/: CMakeLists.txt
src/unittest/source/: test_byteQueue.cc  test_eventIO.cc  test_inetAddress.cc  test_kqueue.cc  test_thread.cc  test_thread2.cc  test_time.cc
tools/gitlab_cicd/: clean_cicd_all_pipeinle.sh  install.bat  shell_notify.py
tools/gitlab_cicd/format_check/linux/: .clang-format  .clang-format-ignore  .editorconfig  luacheck
tools/gitlab_cicd/format_check/win/: clang-all-format.bat
tools/gitlab_cicd/git_pre_commit/: check-pre-commit.sh  pre-commit
tools/gitlab_cicd/git_pre_reveive/: pre-reveive
